<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">简阅</string>
    <string name="splash_version">版本号：</string>
    <string name="splash_header_text">放眼看世界</string>
    <string name="splash_second_text">阅读更简单</string>
    <string name="unknown_version">未知版本</string>
    <string name="navi_feed">订阅</string>
    <string name="navi_discover">发现</string>
    <string name="favor">收藏</string>
    <string name="navi_setting">设置</string>
    <string name="load_more">加载更多内容</string>
    <string name="delete_feed">删除这条订阅</string>
    <string name="search_result_nothing_found">没有找到任何信息</string>
    <string name="please_enter_text">请输入文本</string>
    <string name="add_feed">添加订阅</string>
    <string name="modify_title">修改标题</string>
    <string name="cancel">取消</string>
    <string name="share_to_friends">分享给朋友</string>
    <string name="copy_link">复制链接</string>
    <string name="copy_img_link">复制图片链接</string>
    <string name="reload">重新加载</string>
    <string name="view_big_img">查看大图</string>
    <string name="copy_title">复制标题</string>
    <string name="little_text_size">小号字体(14sp)</string>
    <string name="middle_text_size">中号字体(24sp)</string>
    <string name="large_text_size">大号字体(32sp)</string>
    <string name="smallest_text_zoom">最小(50%)</string>
    <string name="smaller_text_zoom">较小(75%)</string>
    <string name="normal_text_zoom">中等(100%)</string>
    <string name="larger_text_zoom">较大(150%)</string>
    <string name="largest_text_zoom">最大(175%)</string>
    <string name="add_feed_tips">还没添加订阅，赶紧添加吧</string>
    <string name="click_to_reload">点此重新加载</string>
    <string name="update_now">立即更新</string>
    <string name="close_auto_update">关闭自动检查更新</string>
    <string name="open_auto_update">开启自动检查更新</string>
    <string name="clean_img_cache">清理图片缓存</string>
    <string name="clean_err_log">清理错误日志</string>
    <string name="clean_content_cache">清理内容缓存</string>
    <string name="feedback_url">https://github.com/maxwell-nc/FeedEye/issues</string>
    <string name="share_url">我发现了一个好玩的应用，它的名字叫做简约(FeedEye)，赶紧来下载吧！地址是：https://maxwell-nc.github.io/2015/11/02/FeedEye</string>

</resources>