<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_modify"
        style="@style/item_long_click"
        android:text="@string/modify_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/hr_line" />

    <TextView
        android:id="@+id/tv_delete"
        style="@style/item_long_click"
        android:text="@string/delete_feed" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/hr_line" />

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/item_long_click"
        android:text="@string/cancel" />

</LinearLayout>