<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View style="@style/hr_line" />

    <RadioGroup
        android:id="@+id/rg_navi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="2dp" >

        <RadioButton
            android:id="@+id/rb_feed"
            style="@style/btn_navigation_sytle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:checked="true"
            android:drawableTop="@drawable/btn_navigation_feed"
            android:text="@string/navi_feed" />

        <RadioButton
            android:id="@+id/rb_discover"
            style="@style/btn_navigation_sytle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_navigation_discover"
            android:text="@string/navi_discover" />

        <RadioButton
            android:id="@+id/rb_favor"
            style="@style/btn_navigation_sytle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_navigation_favor"
            android:text="@string/favor" />

        <RadioButton
            android:id="@+id/rb_setting"
            style="@style/btn_navigation_sytle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_navigation_setting"
            android:text="@string/navi_setting" />
    </RadioGroup>

</merge>